--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
         <input type="number" id="qty" name="qty" required><br><br>
 
         <!-- Submit Button -->
-        <button type="submit">Submit</button>
+        <button type="button" id="submitBtn">Submit</button>
+
+        <!-- Previous and Next Buttons -->
+        <button type="button" id="prevBtn">Previous</button>
+        <button type="button" id="nextBtn">Next</button>
     </form>
 
     <!-- Link to external JavaScript file -->
