--- a/index.html
+++ b/index.html
@@ -8,33 +8,83 @@
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <!-- Link to the external JavaScript file -->
     <script src="script.js" defer></script>
+
+    <!-- CSS for mobile responsiveness -->
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        h1 {
+            text-align: center;
+            padding: 20px;
+        }
+        form {
+            max-width: 600px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        label {
+            display: block;
+            margin: 10px 0 5px;
+        }
+        input {
+            width: 100%;
+            padding: 10px;
+            margin: 5px 0 15px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: #28a745;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #218838;
+        }
+        @media (max-width: 768px) {
+            form {
+                width: 90%;
+            }
+        }
+    </style>
 </head>
 <body>
     <h1>Form Submission</h1>
     <form>
         <!-- Reference No -->
         <label for="referenceNo">Reference No:</label>
-        <input type="text" id="referenceNo" name="referenceNo" readonly><br><br>
+        <input type="text" id="referenceNo" name="referenceNo" readonly>
 
         <!-- Date and Time -->
         <label for="dateTime">Date and Time:</label>
-        <input type="text" id="dateTime" name="dateTime" readonly><br><br>
+        <input type="text" id="dateTime" name="dateTime" readonly>
 
         <!-- Branch -->
         <label for="branch">Branch:</label>
-        <input type="text" id="branch" name="branch" required><br><br>
+        <input type="text" id="branch" name="branch" required>
 
         <!-- Location -->
         <label for="location">Location:</label>
-        <input type="text" id="location" name="location" required><br><br>
+        <input type="text" id="location" name="location" required>
 
         <!-- Part No -->
         <label for="partNo">Part No:</label>
-        <input type="text" id="partNo" name="partNo" required><br><br>
+        <input type="text" id="partNo" name="partNo" required>
 
         <!-- Qty -->
         <label for="qty">Qty:</label>
-        <input type="number" id="qty" name="qty" required><br><br>
+        <input type="number" id="qty" name="qty" required>
 
         <!-- Previous Button -->
         <button type="button" id="prevBtn">Previous</button>
