--- a/index.html
+++ b/index.html
@@ -48,9 +48,16 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            margin-bottom: 10px;
         }
         button:hover {
             background-color: #218838;
+        }
+        #downloadBtn {
+            background-color: #007bff;
+        }
+        #downloadBtn:hover {
+            background-color: #0056b3;
         }
         @media (max-width: 768px) {
             form {
@@ -91,6 +98,9 @@
         
         <!-- Next Button -->
         <button type="button" id="nextBtn">Next</button>
+
+        <!-- Download Button -->
+        <button type="button" id="downloadBtn">Download</button>
 
         <!-- Submit Button -->
         <button type="button" id="submitBtn">Submit</button>
