--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </style>
 </head>
 <body>
-    <h1>Form Submission</h1>
+    <h1>SOP & RC Binning</h1>
     <form>
         <!-- Reference No -->
         <label for="referenceNo">Reference No:</label>
